--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,7 @@
 <a routerLink="/products" routerLinkActive="active-link">products</a>|
 <a routerLink="/steps" routerLinkActive="active-link">step/wizard </a>|
 <a routerLink="/slide-edit" routerLinkActive="active-link">slide edit</a>|
+<a routerLink="/map" routerLinkActive="active-link">google maps</a>|
 
 <router-outlet></router-outlet>
 </div>
